# android_utils

./: .gitignore  CMakeLists.txt  build.gradle
src/androidTest/java/com/kenvix/android/: ExampleInstrumentedTest.kt  PreferenceTest.kt
src/main/: AndroidManifest.xml
src/main/cpp/: com_kenvix_android_ApplicationEnvironment.h  com_kenvix_android_ApplicationEnvironment_UserApplication.h  com_kenvix_android_ApplicationEnvironment_Utils.h  com_kenvix_android_NativeCalls.h  main.c
src/main/java/com/kenvix/android/: ApplicationEnvironment.kt  ApplicationProperties.kt  NativeCalls.java
src/main/java/com/kenvix/android/exception/: BadRequestException.java  ForbiddenOperationException.java  InvalidAuthorizationException.java  InvalidResultException.java  LifecycleEndException.java  NotFoundException.java  RequestException.java  ServerFaultException.java  TooManyRequestException.java  UnknownServerException.java
src/main/java/com/kenvix/android/preferences/: ManagedJavaProperties.kt  ManagedPreferences.kt
src/main/java/com/kenvix/android/service/base/: BaseService.java  ServiceBinder.kt  ServiceUtils.kt
src/main/java/com/kenvix/android/ui/base/: BaseActivity.java  BaseActivityUI.java  BaseFragment.java
src/main/java/com/kenvix/android/ui/other/: WebViewActivity.kt
src/main/java/com/kenvix/android/utils/: AndroidUtils.kt  Coroutines.java  Coroutines.kt  DefaultUncaughtExceptionHandler.kt  Invoker.kt  SignatureVerify.kt  Utils.kt
src/main/jni/: utils-main-lib.c
src/main/res/values/: strings.xml
src/test/java/com/kenvix/android/: ExampleUnitTest.kt
